Final hackathon commit

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,15 +1,12 @@
 <header class="header-image">
   <div class="headline">
       <div class="container">
-          <h2>CHECK OUT WHO IS KICKING BUTT</h2>
+          <h2>LEADERBOARD</h2>
       </div>
   </div>
 
 </header>
 
-<div class="container">
-  <h1>Leaderboard</h1>
-</div>
 
 <div class="container">
   <table class="table table-hover table-bordered">
